resume index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <style>
 <body>
-  <heady>
+  <head>
     <center> Mariafernanda Cruz
       <h3>
         <center> 150 Boylston St. Boston, MA 02116</center>
